# OGame

./: Cargo.toml  index.html
src/: main.rs
src/client/: client.rs
src/components/: menu.rs  mod.rs  physics.rs  player.rs  synchronized.rs
src/gui/: menu.rs
src/plugins/: game_plugin.rs  input_plugin.rs  menu_plugin.rs  mod.rs  network_plugin.rs
src/services/: auth.rs  client.rs  mod.rs
src/systems/: init.rs  input.rs  mod.rs  movement.rs  network.rs  physics.rs
src/traits/: receiver.rs  sender.rs
