[package]
name = "OGame"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3"
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
bevy = { version = "0.18.0"} #default-features = false#, features = ["bevy_winit", "bevy_render"] }
[build]
target="x86_64-unknown-linux-gnu"
#[target.'cfg(target_arch = "wasm32")'.dependencies]
#getrandom = { version = "0.3", features = ["wasm_js"] }

#[target.wasm32-unknown-unknown]
#rustflags = ["--cfg", "getrandom_backend=\"wasm_js\""]